feat: implement immutable domain models using Java 17 Records and custom exceptions